--- a/text.html
+++ b/text.html
@@ -7,37 +7,73 @@
 <head>
   <meta charset="utf-8">
   <title>my index page</title>
+  <style>
+    body {
+      background-image: radial-gradient(circle at 50.68% 1.13%, #7e75ff, transparent 100%),radial-gradient(circle at 50.32% 48.83%, #ff94fb, transparent 100%),radial-gradient(circle at 48.56% 98.87%, #403c82, transparent 100%),radial-gradient(circle at 50% 50%, #ffffff, #ffffff 100%);
+      background-size: cover;
+      background-attachment: fixed;
+      font-family: 'comic sans ms', fantasy;
+      color: blueviolet;
+    }
+
+    h1 {
+      color: orange;
+      background-image: radial-gradient(circle at 50.68% 1.13%, #7e75ff, transparent 100%),radial-gradient(circle at 50.32% 48.83%, #ff94fb, transparent 100%),radial-gradient(circle at 48.56% 98.87%, #403c82, transparent 100%),radial-gradient(circle at 50% 50%, rgb(141, 41, 242), rgb(141, 41, 242)0%);
+    }
+
+    li {
+      color: pink;
+    }
+
+    .cheese {
+      color: rgb(248, 248, 93)
+    }
+
+    .beef {
+      color: rgb(165, 93, 42)
+    }
+
+    #spinach {
+      color: green;
+    }
+
+    .tort {
+      color: orange
+    }
+  </style>
 </head>
 
 <body>
   <h1><em>Tortellini</em></h1>
   <h6>The best food ever made</h6>
   <h3>Made by C.J. Feckovic</h3>
-  <p>Tortellini is a small stuffed pasta from Italy. There are different kinds of stuffing for tortellini.</p>
- <p>   Some of those are:</p>
+  <p> <span class="tort">Tortellini</span> is a small stuffed pasta from Italy. There are different kinds of stuffing
+    for <span class="tort">tortellini.</span></p>
+  <p> Some of those are:</p>
   <ol>
-    <li>Parmesan cheese</li>
+    <li class="cheese">Parmesan cheese</li>
     <li>Pork</li>
-    <li>Beef</li>
-    <li>Ricotta cheese</li>
-    <li>Romano cheese</li>
-    <li>Spinach</li>
-    </0l>
-    <blockquote>Tortellini is fun to chew. Its texture and size is similar to ravioli but a little smaller.</blockquote>
-    <code>Tortellini is <mark>yellow</mark></code>
-    <ul>
-      <li><strong>Yummy</strong></li>
-      <li><small>yummy</small></li>
-      <li><del>in</del></li>
-      <li><ins>my</ins></li>
-      <li><sub>tummy</sub></li>
-      <li><sup>:3</sup></li>
-      <li>hohoho</li>
-    </ul>
-    
-    <h2>Thanks for watching</h2>
+    <li class="beef">Beef</li>
+    <li class="cheese">Ricotta cheese</li>
+    <li class="cheese">Romano cheese</li>
+    <li class="cheese" id="spinach">Spinach</li>
+  </ol>
+  <blockquote> <span class="tort">Tortellini</span> is fun to chew. Its texture and size is similar to ravioli but a
+    little smaller.</blockquote>
+  <code> <span class="tort">Tortellini</span> is <mark>yellow</mark></code>
+  <ul>
+    <li><strong>Yummy</strong></li>
+    <li><small>yummy</small></li>
+    <li><del>in</del></li>
+    <li><ins>my</ins></li>
+    <li><sub>tummy</sub></li>
+    <li><sup>:3</sup></li>
+    <li>hohoho</li>
+  </ul>
 
-    
+  <h2>Thanks for watching</h2>
+
+
 
 </body>
 
