--- a/text.html
+++ b/text.html
@@ -38,13 +38,14 @@
     }
 
     .tort {
-      color: orange
+      color: orange;
     }
+    .title: align="center";
   </style>
 </head>
 
 <body>
-  <h1><em>Tortellini</em></h1>
+  <h1><em><li class="title">Tortellini</li></em></h1>
   <h6>The best food ever made</h6>
   <h3>Made by C.J. Feckovic</h3>
   <p> <span class="tort">Tortellini</span> is a small stuffed pasta from Italy. There are different kinds of stuffing
