--- a/text.html
+++ b/text.html
@@ -40,7 +40,8 @@
     .tort {
       color: orange;
     }
-    .title { text-align: center;}
+    .title { text-align: center;
+           color: #ffed8a;}
   </style>
 </head>
 
