--- a/text.html
+++ b/text.html
@@ -20,7 +20,8 @@
       color: orange;
       background-image: radial-gradient(circle at 50.68% 1.13%, #7e75ff, transparent 100%),radial-gradient(circle at 50.32% 48.83%, #ff94fb, transparent 100%),radial-gradient(circle at 48.56% 98.87%, #403c82, transparent 100%),radial-gradient(circle at 50% 50%, rgb(141, 41, 242), rgb(141, 41, 242)0%);
     }
-
+h6 {
+  text-align: center;}
     li {
       color: pink;
     }
