--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
               <meta charset="utf-8">
               <title>C.J.'s Cool Thang</title>
             </head>
-            
             <body>
               <h1>Did you know:</h1>
               <p>Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.</p>
 
             <p><a href="text.html">Tortellini Info</a></p>
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZdw-6AgRnBXshORfwqsLd8DhalKcE8kBYPHe2DQK36g&s" alt="bbq bacon burger">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZdw-6AgRnBXshORfwqsLd8DhalKcE8kBYPHe2DQK36g&s" alt="bbq bacon burger" class="center">
             </body>
             </html>
