--- a/text.html
+++ b/text.html
@@ -47,7 +47,7 @@ h6 {
 </head>
 
 <body>
-  <h1><em><span class="title">Tortellini</span></em></h1>
+  <h1 class="title"><em>Tortellini</em></h1>
   <h6>The best food ever made</h6>
   <h3>Made by C.J. Feckovic</h3>
   <p> <span class="tort">Tortellini</span> is a small stuffed pasta from Italy. There are different kinds of stuffing
