--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!doctype html>
-            
-            <html lang="en">
-            <head>
-              <meta charset="utf-8">
-              <title>C.J.'s Cool Thang</title>
-            </head>
-            <body>
-              <h1>Did you know:</h1>
-              <p>Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.</p>
 
-            <p><a href="text.html">Tortellini Info</a></p>
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZdw-6AgRnBXshORfwqsLd8DhalKcE8kBYPHe2DQK36g&s" alt="bbq bacon burger" class="center">
-            </body>
-            </html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>C.J.'s Cool Thang</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background: #ddd;
+      color: #333;
+      font-family: 'comic sans ms', fantasy;
+      font-family: "Architects Daughter", cursive;
+  font-weight: 400;
+  font-style: normal;
+    }
+    h1{font-weight: 900;
+    COLOR:#000}
+  </style>
+</head>
+
+<body>
+  <h1><strong>DID YOU KNOW:</strong></h1>
+  <p>Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon
+    burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon
+    burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon
+    burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon
+    burger.Barbeque bacon burger.Barbeque bacon burger.</p>
+
+  <p><a href="text.html">Tortellini Info</a></p>
+  <img src="images/potraitart.jpg"
+    alt="self portait art"/>
+</body>
+
+</html>
