--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     burger.Barbeque bacon burger.Barbeque bacon burger.</p>
 
   <p><a href="text.html">Tortellini Info</a></p>
-  <img src="images/potraitart.jpg"
+  <p><a href="boxes.html">Other</a></p>
+  <img src="Pm web thang/images/potraitart.jpg"
     alt="self portait art"/>
 </body>
 
