--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <p><a href="text.html">Tortellini Info</a></p>
   <p><a href="boxes.html">Other</a></p>
-  <img src="Pm web thang/images/potraitart.jpg"
+    <img src="PM web thang/images/potraitart.jpg"
     alt="self portait art"/>
 </body>
 
