--- a/boxes.html
+++ b/boxes.html
@@ -8,6 +8,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=VT323&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: "Architects Daughter", cursive;
@@ -17,14 +23,14 @@
 
     div {
       background: rgb(196, 132, 223);
-      width: 400px;
-      height: 500px;
+      width: 453px;
+      height: auto;
       border: 5px dashed rgb(227, 146, 254);
       border-bottom: 40px solid rgb(181, 110, 212);
       border-right: 40px solid rgb(181, 110, 212);
       border-top: 10px solid rgb(227, 156, 251);
       border-left: 10px solid rgb(227, 156, 251);
-      margin: 20px;
+      margin: 10px;
       margin-left: auto;
       margin-right: auto;
       padding: 20px;
@@ -32,12 +38,28 @@
 
     p {
       font-size: 30px;
+
+    }
+
+    .line1 {
+      padding: 1px;
+      margin: 1px;
+    }
+
+    .roblox {
+      font-family: "VT323";
+      color: rgb(131, 88, 230);
+    }
+
+    .hand {
+      font-family: "Patrick Hand";
+      color: rgb(220, 220, 166);
     }
 
     .div2 {
       background: rgb(175, 146, 254);
-      width: 400px;
-      height: 500px;
+      width: auto;
+      height: auto;
       border: 5px dashed rgb(175, 146, 254);
       border-bottom: 40px solid rgb(165, 132, 255);
       border-right: 40px solid rgb(165, 132, 255);
@@ -52,8 +74,8 @@
 
     .div3 {
       background: rgb(175, 146, 254);
-      width: 400px;
-      height: 400px;
+      width: auto;
+      height: auto;
       border: 5px dashed rgb(175, 146, 254);
       border-bottom: 40px solid rgb(165, 132, 255);
       border-right: 40px solid rgb(165, 132, 255);
@@ -79,11 +101,13 @@
 
     .div4 {
       background: #bf3f3f;
+      width: auto;
+      height: auto;
       border-bottom: 10px solid #cd5959;
       border-right: 40px solid #be2f2f;
       border-top: 40px solid #be2f2f;
       border-left: 10px solid #cd5959;
-      border-radius: 50px
+      border-radius: 50px;
     }
   </style>
 </head>
@@ -91,21 +115,58 @@
 <body>
 
   <div class="shadow">
-    <p>Meow</p>
-    <p>Meow</p>
-    <p>Meow</p>
-    <p>Meow</p>
-    <p>Meow</p>
+    <p>Hello</p>
+    <p>Here I'll put some poems I wrote</p>
+    <p>Also hi Mr. Chad</p>
+
   </div>
-  <div class="div2 shadow">
-    <p>HEWWO :3</p>
+  <div class="div2 shadow roblox">
+    <p><strong>#1: ROBLOX</strong></p>
+    <p class="line1">Roblox,</p>
+    <p class="line1">The land of the free</p>
+    <p class="line1">and the land of the infinite.</p>
+    <p class="line1">Like looking out upon the sea,</p>
+    <p class="line1">Where the view is exquisite.</p>
+    <p class="line1">So many games and so many memories.</p>
+    <p class="line1">Like running in a grassy plain,</p>
+    <p class="line1">Hearing the jingle of accessories.</p>
+    <p class="line1">Finally, you are God.</p>
+    <p class="line1">Other players will never know</p>
+    <p>You are a fraud</p>
+    <p class="line1">Roblox,</p>
+    <p class="line1">The land of the free</p>
+    <p class="line1">and of the infinite.</p>
+  </div>
+  <div class="div4 shadow hand">
+    <p><strong>#2: My Corpse</strong></p>
+    <p class="line1">I give my water for your soil</p>
+    <p class="line1">I can't stop crying,</p>
+    <p class="line1">You must be watching me toil</p>
+    <p class="line1">Oh how I loved you</p>
+    <p class="line1">Now I take on your flesh</p>
+    <p class="line1">And swap out yours for fresh</p>
+    <p class="line1">Your flies, now mine</p>
+    <p class="line1">Praying the sun shines on you eyes once more</p>
+    <p class="line1">As I resurrect you,</p>
+    <p class="line1">I know some may wish they'd never met you</p>
+    <p class="line1">But your beauty cannot compare to any other,</p>
+    <p class="line1">Like a summmer heat</p>
+    <p class="line1">Overwhelming, but without I'd be incomplete</p>
+    <p>My skin grows grey and my face dry</p>
+    <p class="line1">It didn't work</p>
+    <p class="line1">You are unchanged, at least on the inside,</p>
+    <p class="line1">But I tried.</p>
+    <p class="line1">I can't muster up anything more,</p>
+    <p class="line1">So I lay down to die</p>
+    <p class="line1">Your corpse, now mine</p>
+    <p class="line1">Our story complete</p>
+    <p class="line1">I take one last breath as I become obsolete.</p>
   </div>
   <div class="div3 shadow inner">
-    <p>Hi Mr. Chad</p>
+    <p>#3: That's all  I gyatt</p>
   </div>
-  <div class="div4 shadow"><p>hohohoho</p></div>
   <p>
-    <a href="index.html">back</a>
+    <a href="index.html">Go Back</a>
   </p>
 </body>
 
