--- a/boxes.html
+++ b/boxes.html
@@ -146,11 +146,11 @@
     <p class="line1">Now I take on your flesh</p>
     <p class="line1">And swap out yours for fresh</p>
     <p class="line1">Your flies, now mine</p>
-    <p class="line1">Praying the sun shines on you eyes once more</p>
+    <p class="line1">Praying the sun shines on your eyes once more</p>
     <p class="line1">As I resurrect you,</p>
     <p class="line1">I know some may wish they'd never met you</p>
     <p class="line1">But your beauty cannot compare to any other,</p>
-    <p class="line1">Like a summmer heat</p>
+    <p class="line1">Like a summer heat</p>
     <p class="line1">Overwhelming, but without I'd be incomplete</p>
     <p>My skin grows grey and my face dry</p>
     <p class="line1">It didn't work</p>
