--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <h1><strong>DID YOU KNOW:</strong></h1>
+  <h1><strong>WELCOME</strong></h1>
   <p>Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon
     burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon
     burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon
