--- a/boxes.html
+++ b/boxes.html
@@ -3,171 +3,258 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Boxes</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=VT323&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: "Architects Daughter", cursive;
-      background: #ddd;
-      color: #1aff99;
-    }
+    <meta charset="utf-8">
+    <title>Boxes</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=VT323&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: "Architects Daughter", cursive;
+            background: #ddd;
+            color: #1aff99;
+        }
 
-    div {
-      background: rgb(196, 132, 223);
-      width: 453px;
-      height: auto;
-      border: 5px dashed rgb(227, 146, 254);
-      border-bottom: 40px solid rgb(181, 110, 212);
-      border-right: 40px solid rgb(181, 110, 212);
-      border-top: 10px solid rgb(227, 156, 251);
-      border-left: 10px solid rgb(227, 156, 251);
-      margin: 10px;
-      margin-left: auto;
-      margin-right: auto;
-      padding: 20px;
-    }
 
-    p {
-      font-size: 30px;
 
-    }
+        p {
+            font-size: 30px;
 
-    .line1 {
-      padding: 1px;
-      margin: 1px;
-    }
+        }
 
-    .roblox {
-      font-family: "VT323";
-      color: rgb(131, 88, 230);
-    }
+        .line1 {
+            padding: 1px;
+            margin: 1px;
+        }
 
-    .hand {
-      font-family: "Patrick Hand";
-      color: rgb(220, 220, 166);
-    }
+        .line2 {
+            font-size: 0px;
+            opacity: 0%;
+            padding: 1px;
+            margin: 1px;
+        }
 
-    .div2 {
-      background: rgb(175, 146, 254);
-      width: auto;
-      height: auto;
-      border: 5px dashed rgb(175, 146, 254);
-      border-bottom: 40px solid rgb(165, 132, 255);
-      border-right: 40px solid rgb(165, 132, 255);
-      border-top: 10px solid rgb(194, 172, 255);
-      border-left: 10px solid rgb(194, 172, 255);
-      margin: 20px;
-      margin-left: auto;
-      margin-right: auto;
-      padding: 20px;
-      border-radius: 50px;
-    }
+        .line3 {
+            opacity: 0%;
+        }
 
-    .div3 {
-      background: rgb(175, 146, 254);
-      width: auto;
-      height: auto;
-      border: 5px dashed rgb(175, 146, 254);
-      border-bottom: 40px solid rgb(165, 132, 255);
-      border-right: 40px solid rgb(165, 132, 255);
-      border-top: 10px solid rgb(194, 172, 255);
-      border-left: 10px solid rgb(194, 172, 255);
-      margin: 20px;
-      margin-left: auto;
-      margin-right: auto;
-      padding: 20px;
-      border-radius: 50%;
-      border-top-right-radius: 0;
-      border-top-left-radius: 0;
+        .line4 {
+            opacity: 0%;
+            padding: 1px;
+            margin: 1px;
+        }
 
-    }
+        .roblox {
+            font-family: "VT323";
+            color: rgb(131, 88, 230);
+        }
 
-    .shadow {
-      box-shadow: 40px 20px 10px #ddd;
-    }
+        .hand {
+            font-family: "Patrick Hand";
+            color: rgb(220, 220, 166);
+        }
 
-    .inner {
-      box-shadow: inset 20px 20px 10px rgb(199, 169, 255);
-    }
+        .div1 {
+            transform: scale(1);
+            background: rgb(196, 132, 223);
+            width: 453px;
+            height: auto;
+            border: 5px dashed rgb(227, 146, 254);
+            border-bottom: 40px solid rgb(181, 110, 212);
+            border-right: 40px solid rgb(181, 110, 212);
+            border-top: 10px solid rgb(227, 156, 251);
+            border-left: 10px solid rgb(227, 156, 251);
+            margin: 10px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 90px;
+            margin-bottom: 90px;
+            padding: 20px;
+        }
 
-    .div4 {
-      background: #bf3f3f;
-      width: auto;
-      height: auto;
-      border-bottom: 10px solid #cd5959;
-      border-right: 40px solid #be2f2f;
-      border-top: 40px solid #be2f2f;
-      border-left: 10px solid #cd5959;
-      border-radius: 50px;
-    }
-  </style>
+        .div1:hover {
+            transform: scale(1.5);
+        }
+
+        .div2 {
+            background: rgb(175, 146, 254);
+            width: auto;
+            height: auto;
+            height: 55px;
+            border: 5px dashed rgb(175, 146, 254);
+            border-bottom: 40px solid rgb(165, 132, 255);
+            border-right: 40px solid rgb(165, 132, 255);
+            border-top: 10px solid rgb(194, 172, 255);
+            border-left: 10px solid rgb(194, 172, 255);
+            margin: 20px;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 20px;
+            border-radius: 50px;
+            transform: scale(1);
+
+        }
+
+        .div2:hover {
+            height: 600px;
+
+            .line2 {
+                font-size: 30px;
+                opacity: 100%;
+                transition: opacity .5s;
+            }
+
+            .line3 {
+                font-size: 30px;
+                opacity: 100%;
+                transition: opacity .5s;
+            }
+        }
+
+
+
+
+        .div3 {
+            background: rgb(175, 146, 254);
+            width: auto;
+            height: auto;
+            border: 5px dashed rgb(175, 146, 254);
+            border-bottom: 40px solid rgb(165, 132, 255);
+            border-right: 40px solid rgb(165, 132, 255);
+            border-top: 10px solid rgb(194, 172, 255);
+            border-left: 10px solid rgb(194, 172, 255);
+            margin: 20px;
+            margin-left: 120px;
+            margin-right: 120px;
+            margin-top: 1000px;
+            padding: 20px;
+            border-radius: 50%;
+            border-top-right-radius: 0;
+            border-top-left-radius: 0;
+            overflow: none;
+        }
+
+
+
+        .shadow {
+            box-shadow: 40px 20px 10px #ddd;
+        }
+
+        .inner {
+            box-shadow: inset 20px 20px 10px rgb(199, 169, 255);
+        }
+
+        .div4 {
+            background: #bf3f3f;
+            width: auto;
+            height: 75px;
+            border-bottom: 10px solid #cd5959;
+            border-right: 40px solid #be2f2f;
+            border-top: 40px solid #be2f2f;
+            border-left: 10px solid #cd5959;
+            border-radius: 50px;
+            margin-top: 0px;
+            padding-top: 0px;
+        }
+
+        .div4:hover {
+            height: 1120px;
+
+            .line4 {
+                opacity: 100%;
+                transition: opacity .5s;
+            }
+        }
+
+        .hover,
+        .graphic {
+            width: auto;
+            height: 75px;
+            text-align: center;
+            line-height: 100px;
+        }
+
+        .hover:hover {
+            margin-top: -100px;
+        }
+
+        .graphic {
+            margin-top: auto;
+        }
+
+        .graphic:hover {
+            margin-top: 0px;
+        }
+    </style>
 </head>
 
 <body>
 
-  <div class="shadow">
-    <p>Hello</p>
-    <p>Here I'll put some poems I wrote</p>
-    <p>Also hi Mr. Chad</p>
+    <div class="div1 shadow">
+        <p>Hello</p>
+        <p>Here I'll put some poems I wrote</p>
+        <p>Also hi Mr. Chad</p>
 
-  </div>
-  <div class="div2 shadow roblox">
-    <p><strong>#1: ROBLOX</strong></p>
-    <p class="line1">Roblox,</p>
-    <p class="line1">The land of the free</p>
-    <p class="line1">and the land of the infinite.</p>
-    <p class="line1">Like looking out upon the sea,</p>
-    <p class="line1">Where the view is exquisite.</p>
-    <p class="line1">So many games and so many memories.</p>
-    <p class="line1">Like running in a grassy plain,</p>
-    <p class="line1">Hearing the jingle of accessories.</p>
-    <p class="line1">Finally, you are God.</p>
-    <p class="line1">Other players will never know</p>
-    <p>You are a fraud</p>
-    <p class="line1">Roblox,</p>
-    <p class="line1">The land of the free</p>
-    <p class="line1">and of the infinite.</p>
-  </div>
-  <div class="div4 shadow hand">
-    <p><strong>#2: My Corpse</strong></p>
-    <p class="line1">I give my water for your soil</p>
-    <p class="line1">I can't stop crying,</p>
-    <p class="line1">You must be watching me toil</p>
-    <p class="line1">Oh how I loved you</p>
-    <p class="line1">Now I take on your flesh</p>
-    <p class="line1">And swap out yours for fresh</p>
-    <p class="line1">Your flies, now mine</p>
-    <p class="line1">Praying the sun shines on your eyes once more</p>
-    <p class="line1">As I resurrect you,</p>
-    <p class="line1">I know some may wish they'd never met you</p>
-    <p class="line1">But your beauty cannot compare to any other,</p>
-    <p class="line1">Like a summer heat</p>
-    <p class="line1">Overwhelming, but without I'd be incomplete</p>
-    <p>My skin grows grey and my face dry</p>
-    <p class="line1">It didn't work</p>
-    <p class="line1">You are unchanged, at least on the inside,</p>
-    <p class="line1">But I tried.</p>
-    <p class="line1">I can't muster up anything more,</p>
-    <p class="line1">So I lay down to die</p>
-    <p class="line1">Your corpse, now mine</p>
-    <p class="line1">Our story complete</p>
-    <p class="line1">I take one last breath as I become obsolete.</p>
-  </div>
-  <div class="div3 shadow inner">
-    <p>#3: That's all  I gyatt</p>
-  </div>
-  <p>
-    <a href="index.html">Go Back</a>
-  </p>
+    </div>
+    <div class="div2 shadow roblox">
+        <h1><strong>#1: ROBLOX</strong></h1>
+        <p class="line2">Roblox,</p>
+        <p class="line2">The land of the free</p>
+        <p class="line2">and the land of the infinite.</p>
+        <p class="line2">Like looking out upon the sea,</p>
+        <p class="line2">Where the view is exquisite.</p>
+        <p class="line2">So many games and so many memories.</p>
+        <p class="line2">Like running in a grassy plain,</p>
+        <p class="line2">Hearing the jingle of accessories.</p>
+        <p class="line2">Finally, you are God.</p>
+        <p class="line2">Other players will never know</p>
+        <p class="line3">You are a fraud</p>
+        <p class="line2">Roblox,</p>
+        <p class="line2">The land of the free</p>
+        <p class="line2">and of the infinite.</p>
+    </div>
+    <div class="div4 shadow hand">
+        <p><strong>#2: My Corpse</strong></p>
+        <p class="line4">I give my water for your soil</p>
+        <p class="line4">I can't stop crying,</p>
+        <p class="line4">You must be watching me toil</p>
+        <p class="line4">Oh how I loved you</p>
+        <p class="line4">Now I take on your flesh</p>
+        <p class="line4">And swap out yours for fresh</p>
+        <p class="line4">Your flies, now mine</p>
+        <p class="line4">Praying the sun shines on you eyes once more</p>
+        <p class="line4">As I resurrect you,</p>
+        <p class="line4">I know some may wish they'd never met you</p>
+        <p class="line4">But your beauty cannot compare to any other,</p>
+        <p class="line4">Like a summmer heat</p>
+        <p class="line4">Overwhelming, but without I'd be incomplete</p>
+        <p class="line4">My skin grows grey and my face dry</p>
+        <p class="line4">It didn't work</p>
+        <p class="line4">You are unchanged, at least on the inside,</p>
+        <p class="line4">But I tried.</p>
+        <p class="line4">I can't muster up anything more,</p>
+        <p class="line4">So I lay down to die</p>
+        <p class="line4">Your corpse, now mine</p>
+        <p class="line4">Our story complete</p>
+        <p class="line4">I take one last breath as I become obsolete.</p>
+    </div>
+    <div class="div3 shadow inner">
+        <div class="hover">
+            <p>Hover me...</p>
+            <div class="graphic">
+                <p>Graphic Design is my passion</p>
+            </div>
+        </div>
+    </div>
+    <p>
+        <a href="index.html">Go Back</a>
+    </p>
 </body>
 
 </html>
