--- a/boxes.html
+++ b/boxes.html
@@ -153,14 +153,16 @@
         .div4 {
             background: #bf3f3f;
             width: auto;
-            height: 75px;
+            height: 100px;
             border-bottom: 10px solid #cd5959;
             border-right: 40px solid #be2f2f;
             border-top: 40px solid #be2f2f;
             border-left: 10px solid #cd5959;
             border-radius: 50px;
             margin-top: 0px;
-            padding-top: 0px;
+            margin-left:auto;
+            margin-right:auto;
+            padding-top: auto;
         }
 
         .div4:hover {
