--- a/boxes.html
+++ b/boxes.html
@@ -137,7 +137,7 @@
             border-radius: 50%;
             border-top-right-radius: 0;
             border-top-left-radius: 0;
-            overflow: none;
+            overflow: hidden;
         }
 
 
@@ -183,16 +183,10 @@
         }
 
         .hover:hover {
-            margin-top: -100px;
+            margin-top: -200px;
         }
 
-        .graphic {
-            margin-top: auto;
-        }
-
-        .graphic:hover {
-            margin-top: 0px;
-        }
+      
     </style>
 </head>
 
