--- a/index.html
+++ b/index.html
@@ -12,28 +12,102 @@
     body {
       background: #ddd;
       color: #333;
-      font-family: 'comic sans ms', fantasy;
       font-family: "Architects Daughter", cursive;
-  font-weight: 400;
-  font-style: normal;
+      font-weight: 400;
+      font-style: normal;
+      font-size: 20px;
     }
-    h1{font-weight: 900;
-    COLOR:#000}
+
+    h1 {
+      font-weight: 900;
+      COLOR: #000;
+      text-align: center;
+    }
+
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      margin-left: auto;
+      margin-right: auto;
+      width: 550px;
+    }
+
+    .center {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+    }
+
+    /* a {
+      color: rgb(162, 162, 219);
+      font-weight: 800;
+      text-decoration: none;
+      font-size: 20px;
+      transition: 1s font-size, 1s color;
+    }
+    a:hover{
+      color:rgb(138, 138, 205);
+      text-decoration: underline;
+      font-size: 30px;
+    }
+    */
+    a {
+      text-decoration: none;
+      color: black;
+      display: block;
+      background-color: rgb(187, 105, 241);
+      border: 2px solid rgb(152, 76, 202);
+      width: 150px;
+      text-align: center;
+      margin-top: 50px;
+      margin-left: 50px;
+      margin-right: 50px;
+      border-radius: 20px;
+      transition: 1s transform, 1s box-shadow;
+      box-shadow: 0 0 0 transparent;
+    }
+
+    a:hover {
+      transform: scale(2);
+      box-shadow: 0 10px 15px #b08cca;
+    }
+
+    li {
+      display: inline-block;
+    }
+
+    .glaggleland {
+      text-align: center;
+      width: 250px;
+      height: 250px;
+      margin-left: auto;
+      margin-right: auto;
+      padding-top: auto;
+      background-color: yellow;
+      border: 2px solid black;
+      font-size: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   </style>
 </head>
 
 <body>
   <h1><strong>WELCOME</strong></h1>
-  <p>Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon
-    burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon
-    burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon
-    burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon burger.Barbeque bacon
-    burger.Barbeque bacon burger.Barbeque bacon burger.</p>
-
-  <p><a href="text.html">Tortellini Info</a></p>
-  <p><a href="boxes.html">Other</a></p>
-    <img src="PM web thang/images/potraitart.jpg"
-    alt="self portait art"/>
+  <p>My name is C.J. Feckovic😼</p>
+  <p>I <2 coding</p>
+      <p>I go to LCC and I code</p>
+      <p>I go home and I code</p>
+      <p>YIPPEEE</p>
+      <img src="images/potraitart.jpg" alt="self portait art" class="center" />
+      <ul>
+        <li><a href="text.html">Tortellini Info</a></li>
+        <li><a href="boxes.html">Other</a></li>
+      </ul>
+      <a href="glaggleland.html" class="glaggleland">GLAGGLE LAND</a>
 </body>
 
 </html>
