--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <p>I go to LCC and I code</p>
       <p>I go home and I code</p>
       <p>YIPPEEE</p>
-      <img src="images/potraitart.jpg" alt="self portait art" class="center" />
+      <img src="PM web thang/PM web thang/images/potraitart.jpg" alt="self portait art" class="center" />
       <ul>
         <li><a href="text.html">Tortellini Info</a></li>
         <li><a href="boxes.html">Other</a></li>
