--- a/glaggleland.html
+++ b/glaggleland.html
@@ -15,21 +15,21 @@
 
 <body>
     <h1>WELCOME TO GLAGGLE LAND!!!!1!!!!!111!1</h1>
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
     <br/>
     <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
     <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
