--- a/glaggleland.html
+++ b/glaggleland.html
@@ -31,18 +31,28 @@
     <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
     <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
     <br/>
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
     </br>
+    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland" class="center" />        <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland" class="center" />
+    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland" class="center" />
+</br>
 </body>
 
 </html>
