--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      border-radius: 50%;
     }
   </style>
 </head>
