--- a/glaggleland.html
+++ b/glaggleland.html
@@ -10,34 +10,29 @@
         h1 {
             text-align: center;
         }
-        .center{display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 50%;}
+
+   /*     .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }*/
     </style>
 </head>
 
 <body>
     <h1>WELCOME TO GLAGGLE LAND!!!!1!!!!!111!1</h1>
-    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland" class="center" />
-    <br/>
-    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland" class="center" />
-
+    <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland1" class="center" />
+    <h2>GET REAEDY TO GET YOUR GLAGGLE ON : )</h2>
+    <br />
+    <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland2" class="center" />
+    <H3>HAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHA</H3>
     </br>
-    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland" class="center" />
-    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland" class="center" />
-    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland" class="center" />
-</br>
+    <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland3"
+        class="center" />
+        <H6>PLEASE HELP ME I CAN'T GET OUT</H6>
+        <H1>AHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHA</H1>
+    </br>
 </body>
 
 </html>
