--- a/glaggleland.html
+++ b/glaggleland.html
@@ -10,6 +10,10 @@
         h1 {
             text-align: center;
         }
+        
+        h6{
+            opacity: 10%;
+        }
 
    /*     .center {
             display: block;
