--- a/glaggleland.html
+++ b/glaggleland.html
@@ -37,6 +37,10 @@
         <H6>PLEASE HELP ME I CAN'T GET OUT</H6>
         <H1>AHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHA</H1>
     </br>
+    <audio controls autoplay>
+            <source src="Mii Apartments (Hungry) - Tomodachi Life OST.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
 </body>
 
 </html>
