--- a/glaggleland.html
+++ b/glaggleland.html
@@ -27,7 +27,7 @@
 <body>
     <h1>WELCOME TO GLAGGLE LAND!!!!1!!!!!111!1</h1>
     <img src="PM web thang/PM web thang/images/giggler-festival-glaggle.gif" alt="glaggleland1" class="center" />
-    <h2>GET REAEDY TO GET YOUR GLAGGLE ON : )</h2>
+    <h2>GET READY TO GET YOUR GLAGGLE ON : )</h2>
     <br />
     <img src="PM web thang/PM web thang/images/glaggleland-glaggle.gif" alt="glaggleland2" class="center" />
     <H3>HAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHA</H3>
