--- a/glaggleland.html
+++ b/glaggleland.html
@@ -10,17 +10,31 @@
         h1 {
             text-align: center;
         }
-        
-        h6{
+
+        h6 {
             opacity: 10%;
         }
 
-   /*     .center {
+        /*     .center {
             display: block;
             margin-left: auto;
             margin-right: auto;
             width: 50%;
         }*/
+        a {
+            text-decoration: none;
+            opacity: 10%;
+            margin:0px;
+            
+        }
+
+        ul {
+            list-style-type: none;
+        }
+        .help:hover,
+        .dont:hover{
+            opacity: 20%;
+        }
     </style>
 </head>
 
@@ -34,13 +48,19 @@
     </br>
     <img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif" alt="glaggleland3"
         class="center" />
-        <H6>PLEASE HELP ME I CAN'T GET OUT</H6>
-        <H1>AHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHA</H1>
+    <H6>PLEASE HELP ME I CAN'T GET OUT</H6>
+    <ul>
+        <li><a href="Q.html" class="help">Help</a></li>
+        <li><a href="index.html" class="dont">Do not</a></li>
+    </ul>
+    <!--FYI take everything beyond this link as goofing around-->
+    <H1>AHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHA</H1>
+
     </br>
     <audio controls autoplay>
-            <source src="Mii Apartments (Hungry) - Tomodachi Life OST.mp3" type="audio/mpeg">
-          Your browser does not support the audio element.
-          </audio>
+        <source src="Mii Apartments (Hungry) - Tomodachi Life OST.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 </body>
 
 </html>
