--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <title>C.J.'s Cool Thang</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       background: #ddd;
+      background-image: url("bliss.jpeg");
       color: #333;
-      font-family: "Architects Daughter", cursive;
+      font-family: "Silkscreen";
       font-weight: 400;
       font-style: normal;
       font-size: 20px;
