--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
     body {
       background: #ddd;
-      background-image: url("bliss.jpeg");
+      background-image: url("webbackground.jpg");
       color: #333;
       font-family: "Silkscreen";
       font-weight: 400;
