--- a/index.html
+++ b/index.html
@@ -19,29 +19,12 @@
             font-size: 20px;
         }
 
-        img.bg {
-
-            min-height: 100%;
-            min-width: 1024px;
-
-
-            width: 100%;
-            height: auto;
-
-
-            position: fixed;
-            top: 0;
-            left: 0;
-        }
-
-        @media screen and (max-width: 1024px) {
-
-           
-            img.bg {
-                left: 50%;
-                margin-left: -512px;
-                /* 50% */
-            }
+        html {
+            background: url(images/bg.jpg) no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
         }
 
         h1 {
