--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style>
         body {
             background: #ddd;
-            background-image: url("webbackground.jpeg");
+            background-image: url("webbackground.jpg");
             color: #333;
             font-family: "Silkscreen";
             font-weight: 400;
@@ -20,7 +20,7 @@
         }
 
         html {
-            background: url(images/bg.jpg) no-repeat center center fixed;
+            background: url(webbackground.jpg) no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
