--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
 
 <body>
 
-    <img src="PM web thang/PM web thang/images/potraitart.jpg" alt="self portait art" class="center" />
+   
     <ul>
-        <li><a href="text.html">Tortellini Info</a></li>
-        <li><a href="boxes.html">Other</a></li>
+        <li><a href="text.html"><img src="tortellini.png" alt="Tortellini" style="width:42px;height:42px;"></a></li>
+        <li><a href="boxes.html"><img src="folder.png" alt="Boxes" style="width:42px;height:42px;"></a></li>
     </ul>
-    <a href="glaggleland.html" class="glaggleland">GLAGGLE LAND</a>
+    <a href="glaggleland.html"><img src="glaggleweb.png" alt="GlaggleLand" style="width:42px;height:42px;"></a>
 </body>
 
 </html>
