--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         a {
             text-decoration: none;
             color: black;
-            width: 150px;
-            text-align: center;
+            width: 500px;
+            height: 500px;
+            text-align: left;
             margin-top: 50px;
         }
 
