--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
             list-style-type: none;
             margin: 0;
             padding: 0;
-            margin-left: auto;
-            margin-right: auto;
+            margin-left: 0px;
             width: 550px;
         }
 
@@ -54,7 +53,6 @@
             text-decoration: none;
             color: black;
             width: 150px;
-            text-align: left;
             margin-top: 50px;
         }
 
@@ -71,7 +69,7 @@
         <li><a href="text.html"><img src="tortellini.png" alt="Tortellini" style="width:100px;height:100px;"></a></li>
         <li><a href="boxes.html"><img src="folder.png" alt="Boxes" style="width:100px;height:100px;"></a></li>
     </ul>
-    <a href="glaggleland.html"><img src="glaggleweb.png" alt="GlaggleLand" style="width:42px;height:42px;"></a>
+    <a href="glaggleland.html"><img src="glaggleweb.png" alt="GlaggleLand" style="width:100px;height:100px;"></a>
 </body>
 
 </html>
