--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             width: 50%;
         }
 
+        .g {
+            margin-left: 10px;
+        }
 
         a {
             text-decoration: none;
@@ -69,7 +72,8 @@
         <li><a href="text.html"><img src="tortellini.png" alt="Tortellini" style="width:150px;height:150px;"></a></li>
         <li><a href="boxes.html"><img src="folder.png" alt="Boxes" style="width:150px;height:150px;"></a></li>
     </ul>
-    <a href="glaggleland.html"><img src="glaggleweb.png" alt="GlaggleLand" style="width:100px;height:100px;"></a>
+    <a href="glaggleland.html" class="g"><img src="glaggleweb.png" alt="GlaggleLand"
+            style="width:105px;height:105px;"></a>
 </body>
 
 </html>
