--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@
         <li><a href="text.html"><img src="tortellini.png" alt="Tortellini" style="width:150px;height:150px;"></a></li>
         <li><a href="boxes.html"><img src="folder.png" alt="Boxes" style="width:150px;height:150px;"></a></li>
     </ul>
-    <a href="glaggleland.html" class="g"><img src="glaggleweb.png" alt="GlaggleLand"
-            style="width:105px;height:105px;"></a>
+    <ul>
+        <li><a href="glaggleland.html" class="g"><img src="glaggleweb.png" alt="GlaggleLand"
+                    style="width:105px;height:105px;"></a></li>
+        <li><a href="image.html"><img src="images.png" alt="Images" style="width:105px;height:105px;"></a></li>
+    </ul>
 </body>
 
 </html>
