--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <ul>
         <li><a href="glaggleland.html" class="g"><img src="glaggleweb.png" alt="GlaggleLand"
                     style="width:105px;height:105px;"></a></li>
-        <li><a href="image.html"><img src="images.png" alt="Images" style="width:105px;height:105px;"></a></li>
+        <li><a href="image.html"><img src="image.png" alt="Images" style="width:105px;height:105px;"></a></li>
     </ul>
 </body>
 
