--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
             margin-left: 30px;
         }
 
+        .image {
+            margin-left: 10px;
+        }
+
         a {
             text-decoration: none;
             color: black;
@@ -74,7 +78,8 @@
     <ul>
         <li><a href="glaggleland.html" class="g"><img src="glaggleweb.png" alt="GlaggleLand"
                     style="width:105px;height:105px;"></a></li>
-        <li><a href="image.html"><img src="image.png" alt="Images" style="width:105px;height:105px;"></a></li>
+        <li><a href="image.html" class="image"><img src="images.png" alt="Images" style="width:105px;height:105px;"></a>
+        </li>
     </ul>
 </body>
 
