--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <ul>
         <li><a href="glaggleland.html" class="g"><img src="glaggleweb.png" alt="GlaggleLand"
                     style="width:105px;height:105px;"></a></li>
-        <li><a href="image.html" class="image"><img src="image.png" alt="Images" style="width:105px;height:105px;"></a>
+        <li><a href="images.html" class="image"><img src="image.png" alt="Images" style="width:105px;height:105px;"></a>
         </li>
     </ul>
 </body>
