--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
         <li><a href="images.html" class="image"><img src="image.png" alt="Images" style="width:105px;height:105px;"></a>
         </li>
     </ul>
+    <div>
+        <a href="positions.html"> Position boxes </a>
+    </div>
 </body>
 
 </html>
