--- a/positions.html
+++ b/positions.html
@@ -43,7 +43,7 @@
             right: 90px;
             bottom: 0px;
             background: #face75;
-            background-image: "coding.jpg";
+            background-image: "coding (1).jpg";
         }
 
         .sticky {
