--- a/positions.html
+++ b/positions.html
@@ -43,7 +43,7 @@
             right: 90px;
             bottom: 0px;
             background: #face75;
-            background-image: url("coding(1).jpg");
+            background-image: url("coding.jpg");
         }
 
         .sticky {
