--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
         </li>
     </ul>
     <div>
-        <a href="positions.html"> Position boxes </a>
+        <ul>
+        <li><a href="positions.html"> Position boxes </a></li>
+        <li><a href="grid.html"> Grid thang </a></li>
+        </ul>
     </div>
 </body>
 
