--- a/grid.html
+++ b/grid.html
@@ -64,6 +64,11 @@
 
         }
 
+        p {
+            text-align: center;
+            padding-top: 20px;
+        }
+
         a {
             text-decoration: none;
             color: #333;
@@ -92,21 +97,26 @@
             <h3>2<sup>3</sup> = 8</h3>
         </article>
         <div class="Ads">
-            <a href="glaggleland.html"><img src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif">CLICK!!!!</a>
+            <a href="glaggleland.html"><img
+                    src="PM web thang/PM web thang/images/static-assets-upload11758716458121278800.gif">CLICK!!!!</a>
         </div>
         <Header>
             <h1 class="center">Welcome to C.J.'s WACKY WEBSITE</h1>
         </header>
-        <Footer></footer>
+        <Footer>
+            <p>
+                Made by C.J. Feckovic hohoho
+            </p>
+        </footer>
         <div class="Navigation">
             <h1>Navigation</h1>
-            <a href="html">First link</a>
+            <a href="text.html">Text</a>
             </br>
-            <a href="html">Second link</a>
+            <a href="boxes.html">Boxes</a>
             </br>
-            <a href="html">Third link</a>
+            <a href="images.html">Images</a>
             </br>
-            <a href="html">Fourth link</a>
+            <a href="positions.html">Position Boxes</a>
         </div>
 
     </div>
