--- a/PM web thang/PM web thang/text.html
+++ b/PM web thang/PM web thang/text.html
@@ -20,7 +20,8 @@
       color: orange;
       background-image: radial-gradient(circle at 50.68% 1.13%, #7e75ff, transparent 100%),radial-gradient(circle at 50.32% 48.83%, #ff94fb, transparent 100%),radial-gradient(circle at 48.56% 98.87%, #403c82, transparent 100%),radial-gradient(circle at 50% 50%, rgb(141, 41, 242), rgb(141, 41, 242)0%);
     }
-
+h6 {
+  text-align: center;}
     li {
       color: pink;
     }
@@ -38,13 +39,15 @@
     }
 
     .tort {
-      color: orange
+      color: orange;
     }
+    .title { text-align: center;
+           color: #ffed8a;}
   </style>
 </head>
 
 <body>
-  <h1><em>Tortellini</em></h1>
+  <h1 class="title"><em>Tortellini</em></h1>
   <h6>The best food ever made</h6>
   <h3>Made by C.J. Feckovic</h3>
   <p> <span class="tort">Tortellini</span> is a small stuffed pasta from Italy. There are different kinds of stuffing
@@ -72,6 +75,8 @@
   </ul>
 
   <h2>Thanks for watching</h2>
+
+  <p><a href="index.html">Go Back</a></p>
 
 
 
