--- a/PM web thang/PM web thang/text.html
+++ b/PM web thang/PM web thang/text.html
@@ -2,84 +2,91 @@
 
 <html lang="en">
 
-<!-- Hi Mr. Chad, tortellini is my favorite food.-->
-
 <head>
-  <meta charset="utf-8">
-  <title>my index page</title>
-  <style>
-    body {
-      background-image: radial-gradient(circle at 50.68% 1.13%, #7e75ff, transparent 100%),radial-gradient(circle at 50.32% 48.83%, #ff94fb, transparent 100%),radial-gradient(circle at 48.56% 98.87%, #403c82, transparent 100%),radial-gradient(circle at 50% 50%, #ffffff, #ffffff 100%);
-      background-size: cover;
-      background-attachment: fixed;
-      font-family: 'comic sans ms', fantasy;
-      color: blueviolet;
-    }
+    <meta charset="utf-8">
+    <title>C.J.'s Cool Thang</title>
+    <link rel="shortcut icon" href="flower.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            color: #333;
+            font-family: "Silkscreen";
+            font-weight: 400;
+            font-style: normal;
+            font-size: 20px;
+        }
 
-    h1 {
-      color: orange;
-      background-image: radial-gradient(circle at 50.68% 1.13%, #7e75ff, transparent 100%),radial-gradient(circle at 50.32% 48.83%, #ff94fb, transparent 100%),radial-gradient(circle at 48.56% 98.87%, #403c82, transparent 100%),radial-gradient(circle at 50% 50%, rgb(141, 41, 242), rgb(141, 41, 242)0%);
-    }
-h6 {
-  text-align: center;}
-    li {
-      color: pink;
-    }
+        html {
+            background: url(webbackground.jpg) no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+        }
 
-    .cheese {
-      color: rgb(248, 248, 93)
-    }
+        h1 {
+            font-weight: 900;
+            COLOR: #000;
+            text-align: center;
+        }
 
-    .beef {
-      color: rgb(165, 93, 42)
-    }
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            margin-left: 0px;
+            width: 550px;
+        }
 
-    #spinach {
-      color: green;
-    }
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
 
-    .tort {
-      color: orange;
-    }
-    .title { text-align: center;
-           color: #ffed8a;}
-  </style>
+        .g {
+            margin-left: 30px;
+        }
+
+        .image {
+            margin-left: 35px;
+        }
+
+        a {
+            text-decoration: none;
+            color: black;
+            width: 150px;
+            margin-top: 50px;
+        }
+
+        li {
+            display: inline-block;
+        }
+    </style>
 </head>
 
 <body>
-  <h1 class="title"><em>Tortellini</em></h1>
-  <h6>The best food ever made</h6>
-  <h3>Made by C.J. Feckovic</h3>
-  <p> <span class="tort">Tortellini</span> is a small stuffed pasta from Italy. There are different kinds of stuffing
-    for <span class="tort">tortellini.</span></p>
-  <p> Some of those are:</p>
-  <ol>
-    <li class="cheese">Parmesan cheese</li>
-    <li>Pork</li>
-    <li class="beef">Beef</li>
-    <li class="cheese">Ricotta cheese</li>
-    <li class="cheese">Romano cheese</li>
-    <li class="cheese" id="spinach">Spinach</li>
-  </ol>
-  <blockquote> <span class="tort">Tortellini</span> is fun to chew. Its texture and size is similar to ravioli but a
-    little smaller.</blockquote>
-  <code> <span class="tort">Tortellini</span> is <mark>yellow</mark></code>
-  <ul>
-    <li><strong>Yummy</strong></li>
-    <li><small>yummy</small></li>
-    <li><del>in</del></li>
-    <li><ins>my</ins></li>
-    <li><sub>tummy</sub></li>
-    <li><sup>:3</sup></li>
-    <li>hohoho</li>
-  </ul>
-
-  <h2>Thanks for watching</h2>
-
-  <p><a href="index.html">Go Back</a></p>
 
 
-
+    <ul>
+        <li><a href="text.html"><img src="tortellini.png" alt="Tortellini" style="width:150px;height:150px;"></a></li>
+        <li><a href="boxes.html"><img src="folder.png" alt="Boxes" style="width:150px;height:150px;"></a></li>
+    </ul>
+    <ul>
+        <li><a href="glaggleland.html" class="g"><img src="glaggleweb.png" alt="GlaggleLand"
+                    style="width:105px;height:105px;"></a></li>
+        <li><a href="images.html" class="image"><img src="image.png" alt="Images" style="width:105px;height:105px;"></a>
+        </li>
+    </ul>
+    <div>
+        <ul>
+        <li><a href="positions.html"> Position boxes </a></li>
+        <li><a href="grid.html"> Grid thang </a></li>
+        </ul>
+    </div>
 </body>
 
 </html>
